<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="E_Beamline" Id="{718887e3-2264-42d5-abca-31c446f9f7d9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Beamline :
(
    Miracles := 1,
	Heimdal
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>