<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="E_NeutronFactoryStates" Id="{9085cea0-cfbd-4688-b0f7-767276a2fc4c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_NeutronFactoryStates :
(
    Disabled := 0,
	Maintenance,
	StartUp,
	CoolingDown,
	NotConfirmedReady,
	ConfirmedReady	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>