<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="GVL_APP" Id="{8fe9690c-7907-432e-bedb-6fc99b5ce255}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL

END_VAR

VAR_GLOBAL CONSTANT
    nAXIS_NUM: UINT := 0; (*~ (OPC: 1 : available for OPC-clients)
                         (OPC_PROP[0005]: 1 : OPC_PROP_RIGHTS, here read only) *)
    nPNEUMATIC_AXIS_NUM: UINT := 0;
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>